<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/tan_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/styleOfLnEx">
        <TextView
            android:id="@+id/ExpensesisShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/category_enter"
            android:text="@string/Expenses"
            android:textSize="32sp"
           />
        <TextView
            android:id="@+id/Expensesis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="2sp"
            tools:text="0"
            android:background="@color/category_enter"
            android:textSize="32sp"
        />
        <TextView
            android:id="@+id/ExpensesisLt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text="@string/lt"
            android:paddingStart="4sp"
            android:background="@color/category_enter"
            android:textSize="32sp"
            />
    </LinearLayout>



    <ListView
        android:id="@+id/listOfPerson"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        />

    <TextView
        android:id="@+id/tvOfadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_mian"
        android:gravity="center"
        android:text="@string/addPerson"
        android:padding="16dp"
        android:textColor="@color/tan_background"
        android:textSize="32sp" />



</LinearLayout>